# paracord

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FILE_TREE.md  FOLLOWUPS.md  HINTS_FOR_AGENTS.md  INSTALL.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  WORK_SPLIT.md  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  secret-scan.yml
agent/: Dockerfile  README.md  pyproject.toml  requirements.txt
agent/paperracks_agent/: __init__.py  agent_ops.py  cli.py  client.py  config.py  index.py  manifest.py  secrets.py  security.py  state.py  teleport.py  watcher.py  web.py  web_server.py
agent/systemd/: paperracks-agent.service.example
agent/tests/: test_additional_agent_security.py  test_agent_ops.py  test_cli.py  test_config.py  test_example_config.py  test_ext_agent_path_contracts.py  test_security.py  test_state.py  test_teleport.py  test_web.py
agent/tests/safety/: test_ext_agent_path_safety.py
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  openapi.json  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py  script.py.mako
backend/app/: __init__.py  errors.py  main.py
backend/tests/: conftest.py  test_access_control.py  test_account_profile.py  test_additional_algorithm_contracts.py  test_additional_library_contracts.py  test_additional_security_contracts.py  test_admin_scripts.py  test_agent_teleport_acceptance.py  test_agents.py  test_agents_admin.py  test_ai_admin.py  test_annotation_search_export.py  test_api_deps.py  test_api_flows.py  test_api_security.py  test_api_smoke.py  test_attach_from_path.py  test_auth_hardening.py  test_auth_service.py  test_author_matching.py  test_backup.py  test_batch_cap.py  test_batch_import.py  test_batch_import_api.py  test_batch_job_endpoints.py  test_bibliography_import.py  test_bibtex_import.py  test_bm25_index.py  test_bounded_cache.py  test_chunking.py  test_citation_enrichments.py  test_citation_graph.py  test_citation_styles.py  test_citation_summary.py  test_config.py  test_custom_themes.py  test_d31_audit_events.py  test_d7_extraction_recovery.py  test_default_shelf.py  test_doi_conflict.py  (+86 more)
config/: Caddyfile.example  agent.example.yaml  server.example.yaml
docs/: AGENT_OVERHAUL_DESIGN.md  ARCHIVED_AUDIT_LOG.md  AUDIT.md  B1-B3-ML-DEPTH.md  DECISIONS.md  DISCUSSIONS.md  HYBRID-SEARCH-DESIGN.md  NEEDS_DISCUSSION.md  NEXT_STEPS.md  README.md  SECURITY_TLS.md  THEMING_DESIGN.md  VISUALIZATION_DESIGN.md  WORKPLAN.md  WORKPLAN_2026-07-06.md  WORKPLAN_2026-07-09_easy-audit-items.md  WORKPLAN_2026-07-10_batch10.md  WORKPLAN_2026-07-11_batch12.md  WORKPLAN_2026-07-15_ux-batch3.md  WORKPLAN_2026-07-16_ai-insights-downloads.md  WORKPLAN_2026-07-16_summary-effort-tags-graphs.md  WORKPLAN_2026-07-18_rows-and-ai-recommend.md  WORKPLAN_2026-07.md  WORKPLAN_ARCHIVE.md  WORKPLAN_B1_AND_ISSUES.md  WORKPLAN_HYBRID_SEARCH.md  WORKPLAN_NEXT.md  compile_docs.sh
docs/agent_handoffs/: 2026-06-23-m0-alembic-admin-tests.md  2026-06-23-m0-auth-sessions.md  2026-06-23-m0-config-security.md  2026-06-23-m0-protect-api-stubs.md  2026-06-23-secrets-policy.md  2026-06-26-p0-audit-fixes.md  2026-07-02-d1-overload-protection.md  2026-07-02-d35-d37-extraction-seam-and-pgvector-default.md  2026-07-02-d36-e2e-journeys-and-ci.md  2026-07-02-d39-queue-cap-and-controls.md  2026-07-02-d7-extraction-enqueue-recovery.md  2026-07-02-full-audit-and-fixes.md  2026-07-02-library-pagination-and-columns.md  2026-07-03-d31-4-5-search-operators-export-formats.md  2026-07-03-d31-b1-b3-audit-summary-annotation.md  2026-07-03-e2e-hardening-and-async-ux-fixes.md  2026-07-03-frontend-infra-audit-batch.md  2026-07-03-gui-bugfixes-header-darktext-charts.md  2026-07-03-rename-reassign-workflows.md  2026-07-03-theming-e2e-journeys.md  2026-07-03-theming-p1-token-pipeline.md  2026-07-03-theming-p2-four-themes.md  2026-07-03-theming-p3-picker-persistence-live-restyle.md  2026-07-03-theming-p4-custom-yaml-themes.md  2026-07-03-track-a-audit-batch.md  2026-07-03-track-a-performance-batch.md  2026-07-03-track-c-p1-citation-counts.md  2026-07-03-track-c-p2-viz-scaffold-temporal-map.md  2026-07-03-track-c-p3-embedding-cluster-map.md  2026-07-03-track-c-p4-citation-summaries.md  2026-07-03-track-c-p5a-more-viz-views.md  2026-07-03-track-c-p5b-graph-depth-umap.md  2026-07-04-reader-reading-mode.md  2026-07-07-batch-a-agent-overhaul.md  2026-07-07-batch-c-citation-summary-enrichments.md  2026-07-07-batch-d-duplicate-resolution-overhaul.md  2026-07-07-batch-l-library-insights-ux.md  2026-07-07-batch-p-paper-view-metadata.md  2026-07-07-batch-s-safety-battery.md  2026-07-07-batch-w-docker-workflow.md  (+47 more)
docs/architecture/: api_surface.md  architecture.md  data_model.md
docs/latex/: README.md  main.tex  references.bib
docs/reference/: 00_index.md  01_architecture.md  02_data_model.md  03_backend_services.md  04_api_surface.md  05_pipelines_workers.md  06_agent_protocol.md  07_frontend.md  08_security.md  09_efficiency.md  10_user_workflows.md  11_future_and_revision_notes.md
docs/runbooks/: ai_providers.md  backup_restore.md  credential_recovery.md  dev_containers.md  development.md  development_setup.md  features.md  local_agent.md  operations.md  secrets_management.md  teleport.md  theming.md
docs/testing/: ADDITIONAL_TEST_BATTERY.md  OPTIONAL_MAKEFILE_TARGETS.md  TEST_DESIGN_REVIEW.md
e2e/: README.md  capture-citation-summary.mjs  global-setup.ts  helpers.ts  package-lock.json  package.json  playwright.config.ts
frontend/: .npmrc  Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: __init__.py  bootstrap_admin.py  check_secrets.py  configure_e2e_rate_limits.py  create_source_archive.py  dev_server.sh  dump_openapi.py  ensure_e2e_user.py  install_git_hooks.sh  list_users.py  record_backup_event.py  reset_admin_password.py  revoke_sessions.py
(+467 files in other folders)
