[project]
name = "paracord-monorepo"
version = "0.0.0"
description = "Local-first scientific paper library and literature graph scaffold"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM103"]

[tool.ruff.lint.per-file-ignores]
"backend/app/api/**/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "agent/tests"]
pythonpath = ["backend", "agent", "."]
# importlib mode lets the two test_security.py modules (backend + agent) coexist
# without an import-file-mismatch; "." on pythonpath makes `scripts` importable.
addopts = "--import-mode=importlib"
# Bare `pytest` (CI, IDEs) always runs everything, marked or not — only the Makefile's
# fast targets (`make test`/`make ready`) add `-m "not slow"` to skip these locally.
markers = [
    "slow: heavier/supplementary tests (real-Postgres integration, large multi-step acceptance flows like agent teleport, and additional edge-case contract coverage) — skipped by `make test`/`make ready`; run everything with `make test-full`/`make ready-full` or `pytest -m slow`.",
    "safety: deeper adversarial security / attack-robustness / web-stability probes (Batch S). Deselected from BOTH `make test` and `make test-full`; run the battery on its own with `make test-safety` or `pytest -m safety`.",
    "concurrent_db: needs a real per-thread-connection DB (file-based SQLite, not the shared in-memory StaticPool) so genuinely-parallel requests each get their own connection instead of racing one shared handle. Used by the queue-cap concurrency probe.",
]
filterwarnings = [
    # FastAPI 0.139/pydantic 2.13: analyze_param() unconditionally sets `field_info.alias =
    # param_name` for every non-Annotated body/query/header parameter (fastapi/dependencies/
    # utils.py:analyze_param), which trips this pydantic warning the first time each route's
    # state is lazily populated. It fires for virtually every `payload: SomeSchema` endpoint in
    # the app (confirmed via login, imports/bibtex) — an upstream FastAPI-internal artifact, not
    # a bug in our own field declarations. Converting every endpoint to Annotated wrappers would
    # be a sweeping, disproportionate refactor to silence a cosmetic warning; ignore narrowly by
    # exact category instead of a bare blanket ignore.
    "ignore::pydantic.warnings.UnsupportedFieldAttributeWarning",
]
